--- a/package.json
+++ b/package.json
@@ -18,10 +18,18 @@
   "license": "MIT",
   "devDependencies": {
     "browser-sync": "^1.8.1",
-    "gulp": "^3.8.10",
+    "del": "^2.2.0",
+    "fs": "0.0.2",
+    "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.0.0",
-    "gulp-inline-source": "^1.1.0",
+    "gulp-clean": "^0.3.1",
+    "gulp-file-include": "^0.13.7",
+    "gulp-inline-source": "^1.3.0",
+    "gulp-jade": "^1.1.0",
     "gulp-mc-inliner": "0.0.4",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.1.1",
     "gulp-util": "^3.0.3",
     "htmlstrip-native": "^0.1.1",
